Start of Version 1

--- a/NanoDNA.ProcessRunner/NanoDNA.ProcessRunner.csproj
+++ b/NanoDNA.ProcessRunner/NanoDNA.ProcessRunner.csproj
@@ -2,7 +2,7 @@
 
 	<!-- Building / Publishing Metadata -->
 	<PropertyGroup>
-		<RootNamespace>NanoDNA.CommandRunner</RootNamespace>
+		<RootNamespace>NanoDNA.ProcessRunner</RootNamespace>
 		<ProductName>$(RootNamespace)</ProductName>
 		<AssemblyName>$(RootNamespace)</AssemblyName>
 		<OutputType>Library</OutputType>
