--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -4,7 +4,6 @@ on:
   workflow_dispatch:
   pull_request:
   
-
 permissions:
   contents: read 
   packages: read
@@ -95,21 +94,21 @@ jobs:
         shell: bash
         run: dotnet publish -c Release -r "${{ matrix.platforms }}" --self-contained true --no-restore -o bin/Release/${{ github.event.repository.name }}-${{ matrix.platforms }}
 
-  #upload-source:
-  #  needs: build-source
-  #  runs-on: ["self-hosted", "run-${{github.run_id}}"]
-  #  strategy:
-  #    max-parallel: 6
-  #    matrix:
-  #      platforms: ["win-x64", "win-x86", "linux-x64", "linux-arm64", "osx-x64", "osx-arm64"]
-  #  steps:
-  #    - name: Compress Standalone Source
-  #      shell: bash
-  #      run: tar -czf bin/Release/${{ github.event.repository.name }}-${{ matrix.platforms }}.tar.gz bin/Release/${{ github.event.repository.name }}-${{ matrix.platforms }}
-  #
-  #    - name: Upload Standalone Source
-  #      uses: actions/upload-artifact@v4
-  #      with:
-  #        name: ${{ github.event.repository.name }}-${{ matrix.platforms }}.tar.gz
-  #        path: bin/Release/${{ github.event.repository.name }}-${{ matrix.platforms }}.tar.gz
-  #        retention-days: 1
+  upload-source:
+    needs: build-source
+    runs-on: ["self-hosted", "run-${{github.run_id}}"]
+    strategy:
+      max-parallel: 6
+      matrix:
+        platforms: ["win-x64", "win-x86", "linux-x64", "linux-arm64", "osx-x64", "osx-arm64"]
+    steps:
+      - name: Compress Standalone Source
+        shell: bash
+        run: tar -czf bin/Release/${{ github.event.repository.name }}-${{ matrix.platforms }}.tar.gz bin/Release/${{ github.event.repository.name }}-${{ matrix.platforms }}
+  
+      - name: Upload Standalone Source
+        uses: actions/upload-artifact@v4
+        with:
+          name: ${{ github.event.repository.name }}-${{ matrix.platforms }}.tar.gz
+          path: bin/Release/${{ github.event.repository.name }}-${{ matrix.platforms }}.tar.gz
+          retention-days: 1
