--- a/NanoDNA.ProcessRunner.Tests/NanoDNA.ProcessRunner.Tests.csproj
+++ b/NanoDNA.ProcessRunner.Tests/NanoDNA.ProcessRunner.Tests.csproj
@@ -23,6 +23,8 @@
 		<PackageReference Include="NUnit.Analyzers" Version="3.9.0" />
 		<PackageReference Include="NUnit3TestAdapter" Version="4.5.0" />
 	</ItemGroup>
+	
+	<!-- Project Reference -->
 	<ItemGroup>
 	  <ProjectReference Include="..\NanoDNA.ProcessRunner\NanoDNA.ProcessRunner.csproj" />
 	</ItemGroup>
