--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -35,7 +35,7 @@ jobs:
     steps:
       - name: Build for NuGet 
         shell: bash
-        run: dotnet publish -c Release -f net8.0 --no-restore #-o bin/Release/net8.0
+        run: dotnet publish NanoDNA.ProcessRunner.csproj -c Release -f net8.0 --no-restore #-o bin/Release/net8.0
 
       - name: Pack for NuGet
         id: pack-nuget
