--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -35,7 +35,7 @@ jobs:
     steps:
       - name: Build for NuGet 
         shell: bash
-        run: dotnet publish NanoDNA.ProcessRunner/NanoDNA.ProcessRunner.csproj -c Release -f net8.0 --no-restore #-o bin/Release/net8.0
+        run: dotnet publish NanoDNA.ProcessRunner/NanoDNA.ProcessRunner.csproj -c Release -f net8.0 --no-restore
 
       - name: Pack for NuGet
         id: pack-nuget
@@ -92,7 +92,7 @@ jobs:
     steps:
       - name: Build as Standalone Source
         shell: bash
-        run: dotnet publish -c Release -r "${{ matrix.platforms }}" --self-contained true --no-restore -o bin/Release/${{ github.event.repository.name }}-${{ matrix.platforms }}
+        run: dotnet publish NanoDNA.ProcessRunner/NanoDNA.ProcessRunner.csproj -c Release -r "${{ matrix.platforms }}" --self-contained true --no-restore -o bin/Release/${{ github.event.repository.name }}-${{ matrix.platforms }}
 
   upload-source:
     needs: build-source
