--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -51,7 +51,7 @@ jobs:
     steps:
       - name: Build for NuGet 
         shell: bash
-        run: dotnet publish -c Release -f net8.0 -p:Version=${{ needs.version.outputs.version }} --no-restore -o bin/Release/net8.0
+        run: dotnet publish NanoDNA.ProcessRunner/NanoDNA.ProcessRunner.csproj -c Release -f net8.0 -p:Version=${{ needs.version.outputs.version }} --no-restore
 
       - name: Pack for NuGet
         id: pack-nuget
@@ -117,7 +117,7 @@ jobs:
     steps:
       - name: Build as Standalone Source
         shell: bash
-        run: dotnet publish -c Release -r "${{ matrix.platforms }}" -p:Version=${{ needs.version.outputs.version }} --self-contained true --no-restore -o bin/Release/${{ github.event.repository.name }}-${{ matrix.platforms }}
+        run: dotnet publish NanoDNA.ProcessRunner/NanoDNA.ProcessRunner.csproj -c Release -r "${{ matrix.platforms }}" -p:Version=${{ needs.version.outputs.version }} --self-contained true --no-restore -o bin/Release/${{ github.event.repository.name }}-${{ matrix.platforms }}
   
   upload-source:
     runs-on: ["self-hosted", "run-${{github.run_id}}"]
