--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -68,19 +68,19 @@ jobs:
           echo "JSON : $packageJson"
           echo "PACKAGES=$packageJson" >> "$GITHUB_OUTPUT"
 
-  upload-nuget:
-    runs-on: ["self-hosted", "run-${{github.run_id}}"]
-    needs: build-nuget
-    strategy:
-      matrix:
-        packages: ${{ fromJson(needs.build-nuget.outputs.packages) }}
-    steps:
-      - name: Upload NuGet packages as build artifacts
-        uses: actions/upload-artifact@v4
-        with:
-          name: ${{ matrix.packages }}
-          path: ./nupkg/${{ matrix.packages }}
-          retention-days: 1
+  #upload-nuget:
+  #  runs-on: ["self-hosted", "run-${{github.run_id}}"]
+  #  needs: build-nuget
+  #  strategy:
+  #    matrix:
+  #      packages: ${{ fromJson(needs.build-nuget.outputs.packages) }}
+  #  steps:
+  #    - name: Upload NuGet packages as build artifacts
+  #      uses: actions/upload-artifact@v4
+  #      with:
+  #        name: ${{ matrix.packages }}
+  #        path: ./nupkg/${{ matrix.packages }}
+  #        retention-days: 1
 
   build-source:
     needs: setup
@@ -94,21 +94,21 @@ jobs:
         shell: bash
         run: dotnet publish NanoDNA.ProcessRunner/NanoDNA.ProcessRunner.csproj -c Release -r "${{ matrix.platforms }}" --self-contained true --no-restore -o bin/Release/${{ github.event.repository.name }}-${{ matrix.platforms }}
 
-  upload-source:
-    needs: build-source
-    runs-on: ["self-hosted", "run-${{github.run_id}}"]
-    strategy:
-      max-parallel: 6
-      matrix:
-        platforms: ["win-x64", "win-x86", "linux-x64", "linux-arm64", "osx-x64", "osx-arm64"]
-    steps:
-      - name: Compress Standalone Source
-        shell: bash
-        run: tar -czf bin/Release/${{ github.event.repository.name }}-${{ matrix.platforms }}.tar.gz bin/Release/${{ github.event.repository.name }}-${{ matrix.platforms }}
-  
-      - name: Upload Standalone Source
-        uses: actions/upload-artifact@v4
-        with:
-          name: ${{ github.event.repository.name }}-${{ matrix.platforms }}.tar.gz
-          path: bin/Release/${{ github.event.repository.name }}-${{ matrix.platforms }}.tar.gz
-          retention-days: 1
+  #upload-source:
+  #  needs: build-source
+  #  runs-on: ["self-hosted", "run-${{github.run_id}}"]
+  #  strategy:
+  #    max-parallel: 6
+  #    matrix:
+  #      platforms: ["win-x64", "win-x86", "linux-x64", "linux-arm64", "osx-x64", "osx-arm64"]
+  #  steps:
+  #    - name: Compress Standalone Source
+  #      shell: bash
+  #      run: tar -czf bin/Release/${{ github.event.repository.name }}-${{ matrix.platforms }}.tar.gz bin/Release/${{ github.event.repository.name }}-${{ matrix.platforms }}
+  #
+  #    - name: Upload Standalone Source
+  #      uses: actions/upload-artifact@v4
+  #      with:
+  #        name: ${{ github.event.repository.name }}-${{ matrix.platforms }}.tar.gz
+  #        path: bin/Release/${{ github.event.repository.name }}-${{ matrix.platforms }}.tar.gz
+  #        retention-days: 1
