--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -25,7 +25,7 @@ jobs:
           clean: true
 
       - name: Run .NET Restore to reload NuGet Packages
-        run: dotnet restore
+        run: dotnet restore 
 
   build-nuget:
     runs-on: ["self-hosted", "run-${{github.run_id}}"]
@@ -35,80 +35,31 @@ jobs:
     steps:
       - name: Build for NuGet 
         shell: bash
-        run: dotnet publish NanoDNA.ProcessRunner/NanoDNA.ProcessRunner.csproj -c Release -f net8.0 --no-restore
+        run: dotnet build ${{ github.event.repository.name }}/${{ github.event.repository.name }}.csproj -c Release -f net8.0
 
       - name: Pack for NuGet
         id: pack-nuget
         shell: bash
         run: dotnet pack -c Release --no-restore --no-build 
 
-      - name: Extract NuGet Package Names
-        id: extract-package-names
-        shell: bash
-        run: |
-          packageNames=()
-          while IFS= read -r file; do
-              packageNames+=("$(basename "$file")")
-          done < <(find . -type f -name "*.nupkg")
-
-          if [ ${#packageNames[@]} -eq 0 ]; then
-              echo "No packages found. Setting empty JSON array."
-              packageJson="[]"
-          elif [ ${#packageNames[@]} -eq 1 ]; then
-              echo "Single Package Detected. Formatting in JSON Manually"
-              packageJson="[\"${packageNames[0]}\"]"
-          else
-              echo "Packing as JSON Array"
-              packageJson=$(printf '%s\n' "${packageNames[@]}" | jq -R . | jq -s .)
-          fi
-
-          # Ensure proper JSON formatting and escaping
-          packageJson=$(echo "$packageJson" | jq -c .)
-
-          echo "JSON : $packageJson"
-          echo "PACKAGES=$packageJson" >> "$GITHUB_OUTPUT"
-
-  #upload-nuget:
-  #  runs-on: ["self-hosted", "run-${{github.run_id}}"]
-  #  needs: build-nuget
-  #  strategy:
-  #    matrix:
-  #      packages: ${{ fromJson(needs.build-nuget.outputs.packages) }}
-  #  steps:
-  #    - name: Upload NuGet packages as build artifacts
-  #      uses: actions/upload-artifact@v4
-  #      with:
-  #        name: ${{ matrix.packages }}
-  #        path: ./nupkg/${{ matrix.packages }}
-  #        retention-days: 1
+  upload-nuget:
+    runs-on: ["self-hosted", "run-${{github.run_id}}"]
+    needs: build-nuget
+    steps:
+      - name: Upload all NuGet packages
+        uses: actions/upload-artifact@v4
+        with:
+          name: ${{ github.event.repository.name }}
+          path: ./nupkg/*.nupkg
+          retention-days: 1
 
   build-source:
     needs: setup
     runs-on: ["self-hosted", "run-${{github.run_id}}"]
     strategy:
-      max-parallel: 6
       matrix:
         platforms: ["win-x64", "win-x86", "linux-x64", "linux-arm64", "osx-x64", "osx-arm64"]
     steps:
       - name: Build as Standalone Source
         shell: bash
-        run: dotnet publish NanoDNA.ProcessRunner/NanoDNA.ProcessRunner.csproj -c Release -r "${{ matrix.platforms }}" --self-contained true --no-restore -o bin/Release/${{ github.event.repository.name }}-${{ matrix.platforms }}
-
-  #upload-source:
-  #  needs: build-source
-  #  runs-on: ["self-hosted", "run-${{github.run_id}}"]
-  #  strategy:
-  #    max-parallel: 6
-  #    matrix:
-  #      platforms: ["win-x64", "win-x86", "linux-x64", "linux-arm64", "osx-x64", "osx-arm64"]
-  #  steps:
-  #    - name: Compress Standalone Source
-  #      shell: bash
-  #      run: tar -czf bin/Release/${{ github.event.repository.name }}-${{ matrix.platforms }}.tar.gz bin/Release/${{ github.event.repository.name }}-${{ matrix.platforms }}
-  #
-  #    - name: Upload Standalone Source
-  #      uses: actions/upload-artifact@v4
-  #      with:
-  #        name: ${{ github.event.repository.name }}-${{ matrix.platforms }}.tar.gz
-  #        path: bin/Release/${{ github.event.repository.name }}-${{ matrix.platforms }}.tar.gz
-  #        retention-days: 1
+        run: dotnet publish ${{ github.event.repository.name }}/${{ github.event.repository.name }}.csproj -c Release -r "${{ matrix.platforms }}" --self-contained true 
