--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -25,7 +25,7 @@ jobs:
           clean: true
 
       - name: Run .NET Restore to reload NuGet Packages
-        run: dotnet restore
+        run: dotnet restore 
 
   version:
     runs-on: ["self-hosted", "run-${{github.run_id}}"]
@@ -51,65 +51,36 @@ jobs:
     steps:
       - name: Build for NuGet 
         shell: bash
-        run: dotnet publish NanoDNA.ProcessRunner/NanoDNA.ProcessRunner.csproj -c Release -f net8.0 -p:Version=${{ needs.version.outputs.version }} --no-restore
+        run: dotnet publish ${{ github.event.repository.name }}/${{ github.event.repository.name }}.csproj -c Release -f net8.0 -p:Version=${{ needs.version.outputs.version }}
 
       - name: Pack for NuGet
         id: pack-nuget
         shell: bash
-        run: dotnet pack -c Release -p:Version=${{ needs.version.outputs.version }} --no-restore --no-build 
-
-      - name: Extract Nuget Package Names
-        id: extract-package-names
-        shell: bash
-        run: |
-          packageNames=()
-          while IFS= read -r file; do
-              packageNames+=("$(basename "$file")")
-          done < <(find . -type f -name "*.nupkg")
-
-          if [ ${#packageNames[@]} -eq 0 ]; then
-              echo "No packages found. Setting empty JSON array."
-              packageJson="[]"
-          elif [ ${#packageNames[@]} -eq 1 ]; then
-              echo "Single Package Detected. Formatting in JSON Manually"
-              packageJson="[\"${packageNames[0]}\"]"
-          else
-              echo "Packing as JSON Array"
-              packageJson=$(printf '%s\n' "${packageNames[@]}" | jq -R . | jq -s .)
-          fi
-
-          # Ensure proper JSON formatting and escaping
-          packageJson=$(echo "$packageJson" | jq -c .)
-
-          echo "JSON : $packageJson"
-          echo "PACKAGES=$packageJson" >> "$GITHUB_OUTPUT"
+        run: dotnet pack -c Release -p:Version=${{ needs.version.outputs.version }} --no-build 
 
   upload-nuget:
     runs-on: ["self-hosted", "run-${{github.run_id}}"]
-    needs: [build-nuget, version]
+    needs: build-nuget
     env:
       GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-    strategy:
-      matrix:
-        packages: ${{ fromJson(needs.build-nuget.outputs.packages) }}
     steps:
-      - name: Upload NuGet Packages to Actions Artifacts
+      - name: Upload all NuGet packages
         uses: actions/upload-artifact@v4
         with:
-          name: ${{ matrix.packages }}
-          path: ./nupkg/${{ matrix.packages }}
+          name: ${{ github.event.repository.name }}
+          path: ./nupkg/*.nupkg
           retention-days: 1
 
       - name: Upload NuGet Packages to Release
-        working-directory: ./nupkg/
+        working-directory: ./nupkg
         shell: bash
         run: |
-          echo "Uploading ${{ matrix.packages }} as a Release Asset"
-          gh release upload "${{ github.event.release.tag_name }}" "${{ matrix.packages }}" --repo ${{ github.repository }}
+          echo "Uploading NuGet Package as a Release Asset"
+          gh release upload "${{ github.event.release.tag_name }}" *.nupkg --repo ${{ github.repository }}
 
   build-source:
     runs-on: ["self-hosted", "run-${{github.run_id}}"]
-    needs: [setup, version]
+    needs: version
     strategy:
       max-parallel: 6
       matrix:
@@ -117,11 +88,11 @@ jobs:
     steps:
       - name: Build as Standalone Source
         shell: bash
-        run: dotnet publish NanoDNA.ProcessRunner/NanoDNA.ProcessRunner.csproj -c Release -r "${{ matrix.platforms }}" -p:Version=${{ needs.version.outputs.version }} --self-contained true --no-restore -o bin/Release/${{ github.event.repository.name }}-${{ matrix.platforms }}
+        run: dotnet publish ${{ github.event.repository.name }}/${{ github.event.repository.name }}.csproj -c Release -r "${{ matrix.platforms }}" -p:Version=${{ needs.version.outputs.version }} --self-contained true
   
   upload-source:
     runs-on: ["self-hosted", "run-${{github.run_id}}"]
-    needs: [build-source, version]
+    needs: build-source
     env:
       GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
     strategy:
@@ -131,17 +102,17 @@ jobs:
     steps:
       - name: Compress Standalone Source
         shell: bash
-        run: tar -czf bin/Release/${{ github.event.repository.name }}-${{ needs.version.outputs.version }}-${{ matrix.platforms }}.tar.gz bin/Release/${{ github.event.repository.name }}-${{ matrix.platforms }}
+        run: tar -czf ./nupkg/${{ github.event.repository.name }}-${{ needs.version.outputs.version }}-${{ matrix.platforms }}.tar.gz ${{ github.event.repository.name }}/bin/Release/net8.0/${{ matrix.platforms }}
 
       - name: Upload Standalone Source
         uses: actions/upload-artifact@v4
         with:
           name: ${{ github.event.repository.name }}-${{ needs.version.outputs.version }}-${{ matrix.platforms }}.tar.gz
-          path: bin/Release/${{ github.event.repository.name }}-${{ needs.version.outputs.version }}-${{ matrix.platforms }}.tar.gz
+          path: ./nupkg/${{ github.event.repository.name }}-${{ needs.version.outputs.version }}-${{ matrix.platforms }}.tar.gz
           retention-days: 1
 
       - name: Upload Standalone Sources to Release
-        working-directory: bin/Release/
+        working-directory: ./nupkg
         shell: bash
         run: |
           echo "Uploading ${{ github.event.repository.name }}-${{ needs.version.outputs.version }}-${{ matrix.platforms }}.tar.gz as a Release Asset"
@@ -149,16 +120,12 @@ jobs:
 
   publish-to-nuget:
     runs-on: ["self-hosted", "run-${{github.run_id}}"]
-    needs: [setup, build-nuget, build-source]
-    strategy:
-      matrix:
-        packages: ${{ fromJson(needs.build-nuget.outputs.packages) }}
-
+    needs: build-nuget
     steps:
       - name: Publish to GitHub Packages
         shell: bash
         run: |
-          dotnet nuget push "./nupkg/${{ matrix.packages }}" \
+          dotnet nuget push "./nupkg/*.nupkg" \
           --source "https://nuget.pkg.github.com/Nano-DNA-Studios/index.json" \
           --api-key ${{ secrets.GITHUB_TOKEN }} \
           --skip-duplicate
@@ -168,7 +135,7 @@ jobs:
         env:
           NUGET_API_KEY: ${{ secrets.NUGET_KEY }}
         run: |
-          dotnet nuget push "./nupkg/${{ matrix.packages }}" \
+          dotnet nuget push "./nupkg/*.nupkg" \
           --source "https://api.nuget.org/v3/index.json" \
           --api-key "$NUGET_API_KEY" \
           --skip-duplicate
