--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -24,11 +24,11 @@ jobs:
           clean: true
 
       - name: Run .NET Restore to reload NuGet Packages
-        run: dotnet restore
+        run: dotnet restore 
 
   test:
     needs: setup
     runs-on: ["self-hosted", "run-${{github.run_id}}"]
     steps:
       - name: Run Unit Tests using NUnit
-        run: dotnet test -c Release --no-restore --logger "console;verbosity=detailed" --filter "TestCategory!=Integration"
+        run: dotnet test -c Release --logger "console;verbosity=detailed" --filter "TestCategory!=Integration"
