Added File Links

--- a/NanoDNA.ProcessRunner/NanoDNA.ProcessRunner.csproj
+++ b/NanoDNA.ProcessRunner/NanoDNA.ProcessRunner.csproj
@@ -14,4 +14,17 @@
 		<None Include="..\README.md" Pack="true" PackagePath="" />
 	</ItemGroup>
 
+	<!-- Include Items to Edit -->
+	<ItemGroup>
+		<!-- Project Documents -->
+		<None Include="..\README.md" Link="Docs\README.md" />
+		<None Include="..\Directory.Build.props" Link="Docs\Directory.Build.props" />
+		<None Include="..\LICENSE" Link="Docs\LICENSE" />
+
+		<!-- Workflow Scripts -->
+		<None Include="..\.github\workflows\build.yml" Link="Workflows\build.yml" />
+		<None Include="..\.github\workflows\publish.yml" Link="Workflows\publish.yml" />
+		<None Include="..\.github\workflows\test.yml"  Link="Workflows\test.yml" />
+	</ItemGroup>
+
 </Project>
