Added NLog Package

--- a/ProcessRunner/ProcessRunner.csproj
+++ b/ProcessRunner/ProcessRunner.csproj
@@ -27,7 +27,12 @@
 		<!-- Workflow Scripts -->
 		<None Include="..\.github\workflows\build.yml" Link="Workflows\build.yml" />
 		<None Include="..\.github\workflows\publish.yml" Link="Workflows\publish.yml" />
-		<None Include="..\.github\workflows\test.yml"  Link="Workflows\test.yml" />
+		<None Include="..\.github\workflows\test.yml" Link="Workflows\test.yml" />
+	</ItemGroup>
+	
+	<!-- NuGet Package References -->
+	<ItemGroup>
+	  <PackageReference Include="NLog" Version="6.0.0" />
 	</ItemGroup>
 
 </Project>
