--- a/ProcessRunner/NLog.config
+++ b/ProcessRunner/NLog.config
@@ -28,7 +28,7 @@
 
 	<!-- Add Rules to the Targets -->
 	<rules>
-		<logger name="*" minLevel="Info" writeTo="file" final="false" />
+		<logger name="*" minLevel="Debug" writeTo="file" final="false" />
 		<logger name="*" minLevel="Info" writeTo="console" />
 	</rules>
 	
