--- a/ProcessRunner/ProcessRunner.csproj
+++ b/ProcessRunner/ProcessRunner.csproj
@@ -34,5 +34,10 @@
 	<ItemGroup>
 		<PackageReference Include="NLog" Version="6.0.0" />
 	</ItemGroup>
+	<ItemGroup>
+	  <None Update="NLog.config">
+	    <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+	  </None>
+	</ItemGroup>
 
 </Project>
