Modified Logging Categories

--- a/ProcessRunner/NLog.config
+++ b/ProcessRunner/NLog.config
@@ -14,7 +14,8 @@
 			<layout type="JsonLayout">
 				<attributes>
 					<!-- Add Attributes to the Log Line -->
-					<attribute name="timestamp" layout="${date:format=yyyy-MM-ddTHH:mm:ssZ}" />
+					<attribute name="timestamp" layout="${longdate}" />
+					<attribute name="logger" layout="${logger}" />
 					<attribute name="level" layout="${level}" />
 					<attribute name="message" layout="${message}" />
 					<attribute name="exception" layout="${exception:format=Message}" />
