--- a/Directory.Packages.props
+++ b/Directory.Packages.props
@@ -1,6 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <Project>
-  <ItemGroup>
+	<PropertyGroup>
+		<ManagePackageVersionsCentrally>true</ManagePackageVersionsCentrally>
+	</PropertyGroup>
+	<ItemGroup>
     <!-- Common Dependencies -->
     <PackageVersion Include="NLog" Version="6.0.0" />
 
