--- a/ProcessRunner/ProcessRunner.csproj
+++ b/ProcessRunner/ProcessRunner.csproj
@@ -22,7 +22,7 @@
 		<!-- Project Documents -->
 		<None Include="..\README.md" Link="Docs\README.md" />
 		<None Include="..\Directory.Build.props" Link="Docs\Directory.Build.props" />
-		<None Include="..\Directory.Package.props" Link="Docs\Directory.Package.props" />
+		<None Include="..\Directory.Packages.props" Link="Docs\Directory.Packages.props" />
 		<None Include="..\LICENSE" Link="Docs\LICENSE" />
 
 		<!-- Workflow Scripts -->
